# kaniwani-runner

./: .gitignore  CREDITS  README.md  debug.kv  debug.py  galaxy.kv  kv_config.py  main.py  menu.kv  pyproject.toml  runner.kv  transforms.py  user_actions.py  wanikani.py
requirements/: requirements.txt
tools/: dbg.py
views/: config.kv  debug.kv  menu.kv  runner.kv
