[tool.poetry]
name = "kaniwani-runner"
version = "0.0.1"
description = "Endless runner game for Wanikani content"
authors = ["Steve Clement <steve@localhost.lu>"]
license = "The Unlicense"

[tool.poetry.dependencies]
python = "^3.9"
Kivy = "^2.0.0"
wanikani-api = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
